--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
       </div>  
     </section>
     <!-- /container -->
+   <script
+  src="https://code.jquery.com/jquery-3.1.1.js"
+  integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="
+  crossorigin="anonymous"></script>
     <script type='text/javascript' src='js/main.js'></script>
     <script type='text/javascript' src='js/donottouchthisfile.js'></script>
   </body>
